# adaptive-engine

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  nixpacks.toml  pyproject.toml  requirements.txt
.windsurf/workflows/: restart-everything.md
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  state.py
backend/app/agents/: __init__.py  adaptive_agents.py  assessment_agent.py  evaluation_agent.py  gap_agent.py  irt_selector.py  kst.py  lca_agent.py  memory_agent.py  metacognitive_agent.py  orchestrator.py  rasch.py  readiness_agent.py  recommendation_agent.py  remediation_agent.py  signal_bridge.py  vertex_llm.py
backend/app/core/: settings.py
backend/app/db/: engine.py
backend/app/ingest/: dual_mapper.py  pdf_parser.py
backend/app/kg/: builder.py  neo4j_adapter.py  schema.py
backend/app/llm/: gemini_service.py
backend/app/pdf/: __init__.py  styles.py  templates.py  textbook_base.py
backend/app/quiz/: animation_engine.py
backend/tests/: test_assessment_pipeline.py
data/sample_problems/: art_grade5.json  english_grade7.json  history_grade6.json  math_grade5.json  music_grade5.json  reading_grade6.json  science_grade6.json  spanish_grade5.json  writing_grade6.json
frontend/: jest.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/__tests__/: assessment_logic.test.ts
frontend/app/: layout.tsx  page.tsx
infra/: Dockerfile.neo4j  compose.yaml  neo4j-init.sh
scripts/: enrich_prerequisite_edges.py  import_learning_commons.py  ingest_pdfs.py  reseed_supabase_evlin.py
(+52 files in other folders)
